syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

message NewsItem {
    uint32 ID = 1;
    string Header = 2;
    string Content = 3;
    google.protobuf.Timestamp CreationDate = 4;
}

message NewsRequest {
    uint32 ID = 1;
}

service NewsStorageService {
    rpc GetNewsItem (NewsRequest) returns (NewsItem);
}